tests/ui/traits/next-solver/cycles/mixed-cycles-2.stderr
error[E0275]: overflow evaluating the requirement `(): BInd`
  --> $DIR/mixed-cycles-2.rs:30:15
   |
LL |     impls_a::<()>();
   |               ^^
   |
note: required for `()` to implement `B`
  --> $DIR/mixed-cycles-2.rs:25:24
   |
LL | impl<T: ?Sized + BInd> B for T {}
   |                  ----  ^     ^
   |                  |
   |                  unsatisfied trait bound introduced here
note: required for `()` to implement `BInd`
  --> $DIR/mixed-cycles-2.rs:22:21
   |
LL | impl<T: ?Sized + B> BInd for T {}
   |                  -  ^^^^     ^
   |                  |
   |                  unsatisfied trait bound introduced here
   = note: 6 redundant requirements hidden
   = note: required for `()` to implement `BInd`
note: required for `()` to implement `A`
  --> $DIR/mixed-cycles-2.rs:24:28
   |
LL | impl<T: ?Sized + BInd + B> A for T {}
   |                  ----      ^     ^
   |                  |
   |                  unsatisfied trait bound introduced here
note: required by a bound in `impls_a`
  --> $DIR/mixed-cycles-2.rs:27:15
   |
LL | fn impls_a<T: A>() {}
   |               ^ required by this bound in `impls_a`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
